# GraphSearch_For_Kirill

./: CMakeLists.txt
application/: main.cxx
application/includes/: Common.hpp  FileLoader.h  Globals.h  Graph.h  Solver.h  WordSimilarity.h
application/sources/: Common.cxx  FileLoader.cxx  Graph.cxx  Solver.cxx  WordSimilarity.cxx
cmake/Modules/: safeguard.cmake  setflags.cmake
graphs/: directedGraph1.grph  undirectedGraph1.grph
